--- a/app/src/main/res/layout/post_search_layout.xml
+++ b/app/src/main/res/layout/post_search_layout.xml
@@ -104,6 +104,9 @@
                         android:drawableEnd="@drawable/ic_search_24dp"
                         android:drawableRight="@drawable/ic_search_24dp"
                         android:hint="@string/Keyword"
+                        android:imeOptions="actionDone"
+                        android:inputType="text"
+                        android:maxLines="1"
                         android:visibility="visible"
                         app:backgroundTint="@color/lightGray" />
 
