--- a/app/src/main/res/layout/profile_edit_layout.xml
+++ b/app/src/main/res/layout/profile_edit_layout.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="50dp"
-    app:NoConnectionLayout="@layout/state_layout_noconnection"
-    app:NoDataLayout="@layout/state_layout_nodata"
+    app:NoConnectionLayout="@layout/state_layout_no_connection"
+    app:NoDataLayout="@layout/state_layout_no_data"
     app:RefreshbtnRes="@+id/retryBtn"
     app:WaitingLayout="@layout/state_layout_waiting">
 
@@ -47,7 +47,7 @@
                     android:id="@+id/profileImage"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
-                    android:src="@drawable/userprofile"
+                    android:src="@drawable/ic_user_placeholder_24dp"
                     app:elevation="8dp"
                     app:layout_anchorGravity="top|center|center_horizontal"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -186,8 +186,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:visibility="gone"
-                    app:NoConnectionLayout="@layout/state_layout_noconnection"
-                    app:NoDataLayout="@layout/state_layout_nodata"
+                    app:NoConnectionLayout="@layout/state_layout_no_connection"
+                    app:NoDataLayout="@layout/state_layout_no_data"
                     app:RefreshbtnRes="@+id/retryBtn"
                     app:WaitingLayout="@layout/state_layout_waiting"
                     app:layout_constraintTop_toBottomOf="@id/categorySperator">
