--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -251,8 +251,8 @@
                             android:id="@+id/myCategoriesStateLayout"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            app:NoConnectionLayout="@layout/state_layout_noconnection"
-                            app:NoDataLayout="@layout/state_layout_nodata"
+                            app:NoConnectionLayout="@layout/state_layout_no_connection_min"
+                            app:NoDataLayout="@layout/state_layout_no_data"
                             app:RefreshbtnRes="@+id/retryBtn"
                             app:WaitingLayout="@layout/state_layout_waiting"
                             app:layout_constraintTop_toBottomOf="@id/categorySperator">
@@ -262,11 +262,9 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/lg_margin"
-
                                 app:tagBackgroundColor="@color/colorPrimary" />
 
                         </com.brainsocket.mainlibrary.Views.Stateslayoutview>
-
 
                         <android.support.v7.widget.AppCompatTextView
                             android:id="@+id/AdsTitle"
@@ -279,19 +277,20 @@
                             android:textStyle="bold"
                             app:layout_constraintTop_toBottomOf="@+id/myCategoriesStateLayout" />
 
-                        <android.support.v7.widget.AppCompatTextView
+                        <android.support.v7.widget.AppCompatImageButton
                             android:id="@+id/AdsAddLink"
                             style="@style/AppTheme.TextAppearance"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:background="@color/transparent"
                             android:padding="@dimen/md_margin"
                             android:text="@string/Add"
                             android:textColor="@color/profileHeaderColor"
                             android:textStyle="bold"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/myCategoriesStateLayout" />
-
+                            app:layout_constraintTop_toBottomOf="@+id/myCategoriesStateLayout"
+                            app:srcCompat="@drawable/ic_add_dark_24dp" />
 
                         <View
                             android:id="@+id/AdsSperator"
@@ -308,8 +307,8 @@
                             android:id="@+id/myPostsStateLayout"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            app:NoConnectionLayout="@layout/state_layout_noconnection"
-                            app:NoDataLayout="@layout/state_layout_nodata"
+                            app:NoConnectionLayout="@layout/state_layout_no_connection_min"
+                            app:NoDataLayout="@layout/state_layout_no_data"
                             app:WaitingLayout="@layout/state_layout_waiting"
                             app:layout_constraintTop_toBottomOf="@id/AdsSperator">
 
@@ -332,20 +331,20 @@
                             android:textStyle="bold"
                             app:layout_constraintTop_toBottomOf="@+id/myPostsStateLayout" />
 
-
-                        <android.support.v7.widget.AppCompatTextView
+                        <android.support.v7.widget.AppCompatImageButton
                             android:id="@+id/BusinessAddLink"
                             style="@style/AppTheme.TextAppearance"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:background="@color/transparent"
                             android:padding="@dimen/md_margin"
                             android:text="@string/Add"
                             android:textColor="@color/profileHeaderColor"
                             android:textStyle="bold"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/myPostsStateLayout" />
-
+                            app:layout_constraintTop_toBottomOf="@+id/myPostsStateLayout"
+                            app:srcCompat="@drawable/ic_add_dark_24dp" />
 
                         <View
                             android:id="@+id/BusinessSperator"
@@ -362,8 +361,8 @@
                             android:id="@+id/myBusinessStateLayout"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            app:NoConnectionLayout="@layout/state_layout_noconnection"
-                            app:NoDataLayout="@layout/state_layout_nodata"
+                            app:NoConnectionLayout="@layout/state_layout_no_connection_min"
+                            app:NoDataLayout="@layout/state_layout_no_data"
                             app:WaitingLayout="@layout/state_layout_waiting"
                             app:layout_constraintTop_toBottomOf="@id/BusinessSperator">
 
@@ -436,7 +435,7 @@
             android:id="@+id/flexible.example.fab"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:src="@drawable/userprofile"
+            android:src="@drawable/ic_user_placeholder_24dp"
             app:elevation="8dp"
             app:layout_anchor="@id/flexible.example.cardview"
             app:layout_anchorGravity="top|center|center_horizontal" />
