--- a/app/src/main/res/layout/settings_layout.xml
+++ b/app/src/main/res/layout/settings_layout.xml
@@ -39,8 +39,10 @@
 
         <android.support.v7.widget.AppCompatTextView
             style="@style/AppTheme.TitleTextAppearance"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:gravity="start|left"
             android:text="@string/ContactUs"
@@ -79,8 +81,10 @@
 
         <android.support.v7.widget.AppCompatTextView
             style="@style/AppTheme.TitleTextAppearance"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:gravity="start|left"
             android:text="@string/TermsOfUse"
