--- a/app/src/main/res/layout/splash_layout.xml
+++ b/app/src/main/res/layout/splash_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:background="@color/transparent">
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
@@ -24,6 +24,7 @@
         android:text="@string/app_name"
         android:textColor="@color/white"
         android:textStyle="bold"
+        android:visibility="gone"
         app:autoSizeTextType="uniform"
         app:elevation="4dp"
         app:fontFamily="@font/cairo_bold"
@@ -36,14 +37,23 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:contentDescription="@string/contentDescription"
-        android:src="@mipmap/ic_launcher"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
-        app:layout_constraintEnd_toEndOf="@+id/splashTitle"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.2"
-        app:layout_constraintLeft_toLeftOf="@+id/splashTitle"
-        app:layout_constraintRight_toRightOf="@+id/splashTitle"
-        app:layout_constraintStart_toStartOf="@+id/splashTitle"
-        app:layout_constraintTop_toTopOf="@+id/guideline" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.65"
+        app:srcCompat="@drawable/ic_logo" />
 
+    <!--app:layout_constraintBottom_toTopOf="@+id/guideline"-->
+    <!--app:layout_constraintEnd_toEndOf="@+id/splashTitle"-->
+    <!--app:layout_constraintHeight_percent="0.2"-->
+    <!--app:layout_constraintLeft_toLeftOf="@+id/splashTitle"-->
+    <!--app:layout_constraintRight_toRightOf="@+id/splashTitle"-->
+    <!--app:layout_constraintStart_toStartOf="@+id/splashTitle"-->
+    <!--app:layout_constraintTop_toTopOf="@+id/guideline"-->
 
 </android.support.constraint.ConstraintLayout>
