--- a/app/src/main/res/layout/toolbar_main_layout.xml
+++ b/app/src/main/res/layout/toolbar_main_layout.xml
@@ -7,30 +7,36 @@
     android:background="@color/transparent"
     android:title="@string/app_name"
     app:contentInsetStart="@dimen/md_padding"
-    app:logo="@mipmap/ic_launcher"
     app:popupTheme="@style/AppTheme.PopupOverlay">
+    <!--app:logo="@mipmap/ic_launcher"-->
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/title"
-            style="@style/AppTheme.TitleTextAppearance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:shadowColor="@color/grayDarkTextColor"
-            android:shadowRadius="8"
-            android:text="@string/app_name"
-            android:textColor="@color/white"
-            android:textStyle="bold" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <ImageView
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/title"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/md_margin"
+                android:scaleType="fitXY"
+                app:layout_constraintDimensionRatio="W,8:2"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:srcCompat="@drawable/ic_logo_reverse" />
+
+        </android.support.constraint.ConstraintLayout>
+
+
+        <android.support.v7.widget.AppCompatImageView
             android:id="@+id/notificationBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/iconWidth_mid"
+            android:layout_height="@dimen/iconHeight_mid"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/loginBtn"
             android:layout_toStartOf="@+id/loginBtn"
@@ -50,13 +56,14 @@
             app:nbBackground="@drawable/badge_bg_with_shadow"
             app:nbMaxTextLength="2" />
 
-        <ImageView
+        <android.support.v7.widget.AppCompatImageView
             android:id="@+id/loginBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/iconWidth_mid"
+            android:layout_height="@dimen/iconHeight_mid"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
+            android:adjustViewBounds="true"
             android:contentDescription="@string/contentDescription"
             android:src="@mipmap/ic_profile_24dp" />
 
