--- a/app/src/main/res/layout/post_add_layout.xml
+++ b/app/src/main/res/layout/post_add_layout.xml
@@ -226,9 +226,10 @@
                                 style="@style/AppTheme.SmallButtonStyle"
                                 android:layout_width="0dp"
                                 android:layout_height="@dimen/sm_btn_height"
+                                android:layout_margin="@dimen/md_margin"
                                 android:background="@drawable/button_bg"
                                 android:shadowColor="@color/black"
-                                android:text="@string/RegisterBusiness"
+                                android:text="@string/Submit"
                                 android:textColor="@color/white"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintLeft_toLeftOf="parent"
