--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="buttonCorner">2dp</dimen>
 
     <dimen name="elevation">4dp</dimen>
+    <dimen name="sm_elevation">8dp</dimen>
     <dimen name="md_elevation">8dp</dimen>
     <dimen name="lg_elevation">16dp</dimen>
     <dimen name="xlg_elevation">32dp</dimen>
@@ -15,7 +16,9 @@
 
     <dimen name="max_margin">60dp</dimen>
 
+    <dimen name="spacing">1.5dp</dimen>
     <dimen name="sperator">1.5dp</dimen>
+    <dimen name="separator">1.0dp</dimen>
 
     <dimen name="recyclerviewTagHeight">25dp</dimen>
     <dimen name="myAdsRecyclerHeight">100dp</dimen>
@@ -24,6 +27,8 @@
     <dimen name="postItemWidth">160dp</dimen>
     <dimen name="postItemHeight">160dp</dimen>
     <dimen name="businessItemWidth">250dp</dimen>
+
+    <dimen name="xsm_btn_height">20dp</dimen>
     <dimen name="sm_btn_height">36dp</dimen>
     <dimen name="product_image_width">72dp</dimen>
     <dimen name="product_image_height">72dp</dimen>
