--- a/app/src/main/res/drawable/ic_cat_tag.xml
+++ b/app/src/main/res/drawable/ic_cat_tag.xml
@@ -4,7 +4,7 @@
 
     <item android:color="@color/colorPrimary" android:state_checked="false">
         <shape>
-            <stroke android:width="1dp" android:color="@color/lightGray" />
+            <stroke android:width="1dp" android:color="@color/colorPrimary" />
             <solid android:color="@color/white" />
             <corners android:radius="25dp" />
         </shape>
@@ -14,8 +14,7 @@
     <item android:color="@color/white" android:state_checked="true">
         <shape>
             <stroke android:width="1dp" android:color="@color/colorPrimary" />
-            <gradient android:startColor="@color/colorGradientStart"
-                android:endColor="@color/colorGradientEnd"/>
+            <gradient android:endColor="@color/colorGradientEnd" android:startColor="@color/colorGradientStart" />
             <corners android:radius="25dp" />
         </shape>
     </item>
