--- a/app/src/main/res/layout/category_item_layout.xml
+++ b/app/src/main/res/layout/category_item_layout.xml
@@ -7,7 +7,7 @@
     <com.sons.jawad.ninepatchlibrary.MaterialShadowContainerView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:ms9_shadowElevation="@dimen/md_elevation">
+        app:ms9_shadowElevation="@dimen/sm_elevation">
 
         <android.support.constraint.ConstraintLayout
             style="@style/commonNinePatchShadowItemViewStyle"
@@ -18,18 +18,26 @@
             android:background="@drawable/white_radius_bg"
             android:padding="@dimen/zero">
 
+            <!--android:layout_height="@dimen/recyclerviewTagHeight"-->
             <ToggleButton
                 android:id="@+id/category_toggle"
                 style="@style/AppTheme.MainToggle"
                 android:layout_width="wrap_content"
-                android:layout_height="@dimen/recyclerviewTagHeight"
+                android:layout_height="wrap_content"
                 android:layout_margin="@dimen/sm_margin"
                 android:background="@drawable/ic_cat_tag_bg"
                 android:maxLines="1"
                 android:minHeight="@dimen/zero"
                 android:minWidth="@dimen/zero"
-                android:padding="@dimen/sm_padding"
+                android:paddingTop="@dimen/sm_padding"
+                android:paddingBottom="@dimen/sm_padding"
+                android:paddingLeft="@dimen/md_padding"
+                android:paddingStart="@dimen/md_padding"
+                android:paddingEnd="@dimen/md_padding"
+                android:paddingRight="@dimen/md_padding"
                 android:textColor="@drawable/ic_tag_color" />
+
         </android.support.constraint.ConstraintLayout>
     </com.sons.jawad.ninepatchlibrary.MaterialShadowContainerView>
+
 </LinearLayout>
