--- a/app/src/main/res/layout/signin_layout.xml
+++ b/app/src/main/res/layout/signin_layout.xml
@@ -51,6 +51,7 @@
                 android:text="@string/signInHeader"
                 android:textStyle="normal"
                 app:autoSizeTextType="uniform"
+                app:fontFamily="@font/antipasto_regular"
                 app:layout_constraintBottom_toTopOf="@id/emailLayout"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -71,7 +72,10 @@
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
                     android:text="adhamkhwaldeh@gmail.com"
-                    android:textStyle="bold" />
+                    app:fontFamily="@font/antipasto_extrabold" />
+
+                <!--android:textStyle="bold"-->
+                <!--"-->
             </android.support.design.widget.TextInputLayout>
 
 
@@ -88,10 +92,12 @@
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/password"
+                    style="@style/AppTheme.EditTextStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
-                    android:text="123456" />
+                    android:text="123456"
+                    app:fontFamily="@font/antipasto_extrabold" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -102,7 +108,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/Forgotpassword"
                 android:textColor="@color/grayLightTextColor"
-                android:textStyle="bold"
+                app:fontFamily="@font/antipasto_regular"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />
 
@@ -110,9 +116,9 @@
                 android:id="@+id/signinBtnContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/lg_margin"
                 android:orientation="horizontal"
                 android:weightSum="7"
-                android:layout_marginTop="@dimen/lg_margin"
                 app:layout_constraintTop_toBottomOf="@+id/forgotTextViewLink">
 
                 <View
@@ -172,7 +178,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/or"
                     android:textColor="@color/grayLightTextColor"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    app:fontFamily="@font/antipasto_regular" />
 
                 <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/registerTextViewLink"
@@ -189,7 +196,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/anewAccount"
                     android:textColor="@color/grayLightTextColor"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    app:fontFamily="@font/antipasto_regular" />
 
             </LinearLayout>
 
